--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "forum":"https://community.contao.org"
     },
     "require":{
-        "php":">=5.3",
-        "contao/core":">=3.2,<4",
-        "contao-community-alliance/composer-plugin": "*"  
+        "php":">=5.3.2",
+        "contao/core-bundle":">=3.5 || >=4.3",
+        "contao-community-alliance/composer-plugin":"^2.4.0 || 3.*"
     },
     "replace": {
         "contao-legacy/bootstrap_responsive_youtube_embed":"*"
