--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     },
     "require":{
         "php":">=5.3.2",
-        "contao/core-bundle":">=3.5 || >=4.3",
-        "contao-community-alliance/composer-plugin":"^2.4.0 || 3.*"
+        "contao/core-bundle":">=3.5 || >=4.3"
     },
     "replace": {
         "contao-legacy/bootstrap_responsive_youtube_embed":"*"
