Fix inserttag hook and moce to new bundle directory structure.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,5 +4,5 @@ services:
         autoconfigure: true
 
     Markocupic\BootstrapResponsiveYoutubeEmbed\:
-        resource: ../../
-        exclude: ../../{DependencyInjection,Resources,Model}
+        resource: ../src/
+        exclude: ../src/{DependencyInjection}
