--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,14 @@
       "Markocupic\\BootstrapResponsiveYoutubeEmbed\\": "src/"
     }
   },
+  "config": {
+    "allow-plugins": {
+      "contao-components/installer": true,
+      "contao/manager-plugin": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "contao-community-alliance/composer-plugin": true
+    }
+  },
   "extra": {
     "contao-manager-plugin": "Markocupic\\BootstrapResponsiveYoutubeEmbed\\ContaoManager\\Plugin"
   }
